--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
 </head>
 
@@ -10,15 +11,8 @@
 
   <p>apple tree</p>
 
-  <%@game.apples.times do%>
-    <img src='/apple.png'>
-  <%end%>
-
-  <p><%=@game.revealed_word%></p>
-
-  <form>
-    guess a letter: <input type="text" name="guess"/>
-    <input id="guess-button" type="submit" value="guess"/>
+  <form action="/game/new" method="post">
+    <input id="guess-button" type="submit" value="play game"/>
   </form>
 
 </body>
