--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,26 @@
 body {
-    background-color: #f7efda;
-    color: #87ab91;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 70px;
+  background-color: #f7efda;
+  color: #87ab91;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 70px;
+  text-align: center;
 }
 
-#guess-button {
+#apple-picture {
+  height: 100px;
+  width: 84px;
+}
+
+#revealved-word {
+  padding: 0px;
+  margin: 0px;
+}
+
+#guess-a-letter {
+  font-size: 45px;
+}
+
+.appletree-button {
   background-color: #87ab91;
   border: none;
   color: #f7efda;
@@ -13,4 +28,14 @@ body {
   font-size: 20px;
   border-radius: 12px;
   padding: 16px;
+}
+
+input[type=text] {
+  border: none;
+  border-radius: 12px;
+  width: 45px;
+  height: 45px;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 45px;
+  color: #e6302c;
 }
