--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
   <p>apple tree</p>
 
   <form action="/game/new" method="post">
-    <input id="guess-button" type="submit" value="play game"/>
+    <input class="appletree-button" type="submit" value="play game"/>
   </form>
 
 </body>
