--- a/views/game.erb
+++ b/views/game.erb
@@ -17,11 +17,25 @@
 
   <p id="revealed-word"><%=@game.revealed_word%></p>
 
-  <form action="/guess" method="post">
-    <p id="guess-a-letter">guess a letter:<p>
-    <input type="text" name="guess"/><br>
-    <input class="appletree-button" type="submit" value="guess"/>
-  </form>
+  <%if @game.game_over?%>
+
+    <p class="instructions">game over!</p>
+
+    <p class="instructions"><%=@game.final_message%></p>
+
+    <form action="/game/new" method="post">
+      <input class="appletree-button" type="submit" value="play again"/>
+    </form>
+
+  <%else%>
+
+    <form action="/guess" method="post">
+      <p class="instructions">guess a letter:<p>
+      <input type="text" name="guess"/><br>
+      <input class="appletree-button" type="submit" value="guess"/>
+    </form>
+
+  <%end%>
 
 </body>
 
