--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 
 <body>
 
-  <p>apple tree</p>
+  <p class="title">apple tree</p>
 
   <%10.times do%>
     <img id='apple-picture' src='/apple.png'>
