--- a/views/game.erb
+++ b/views/game.erb
@@ -15,7 +15,7 @@
     <img id='apple-picture' src='/apple.png'>
   <%end%>
 
-  <p id="revealed-word"><%=@game.revealed_word%></p>
+  <p><%=@game.revealed_word%></p>
 
   <%if @game.game_over?%>
 
