add definition message to feature

--- a/views/game.erb
+++ b/views/game.erb
@@ -23,6 +23,8 @@
 
     <p class="instructions"><%=@game.final_message%></p>
 
+    <p class="instructions"><%=@game.word_definition%></p>
+
     <form action="/game/new" method="post">
       <input class="appletree-button" type="submit" value="play again"/>
     </form>
