add option for user to select difficulty

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,9 @@
   <p class="instructions">try to guess the hidden word.  for every incorrect letter an apple falls.  if all the apples fall, you lose!</p>
 
   <form action="/game/new" method="post">
-    <input class="appletree-button" type="submit" value="play game"/>
+    <input class="appletree-button" type="submit" name="level" value="easy"/>
+    <input class="appletree-button" type="submit" name="level" value="intermediate"/>
+    <input class="appletree-button" type="submit" name="level" value="difficult"/>
   </form>
 
 </body>
