refactor and return player to level choices if choose to play again

--- a/views/game.erb
+++ b/views/game.erb
@@ -25,7 +25,7 @@
 
     <p class="instructions"><%=@game.word_definition%></p>
 
-    <form action="/game/new" method="post">
+    <form action="/" method="get">
       <input class="appletree-button" type="submit" value="play again"/>
     </form>
 
